# GRAD-ME-Web-App

./: README.md  database.sqlite  pyproject.toml  requirements.txt
.github/workflows/: dash_app.yml
data/: COURSE.csv  EMPLOYMENT.csv  SALARY.csv  SATISFACTION.csv  create_db_add_data.py
src/: app.py  figures.py  layout_app.py  layout_elements.py
src/assets/: stylesheets.css
src/tests/: new_test_file.py  test_dash_app.py
tests/: conftest.py  test_dash_app.py
